--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.0.0-rc.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-runtime": "^6.26.0",
     "react": "^16.4.2",
+    "react-bootstrap": "^0.32.2",
     "react-dom": "^16.4.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
