--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,10 +7,10 @@
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "react": "^16.4.2",
-    "react-bootstrap": "^0.32.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "reactstrap": "^6.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
