--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,6 +7,9 @@
     "@types/reactstrap": "^6.0.2",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
+    "express-session": "^1.15.6",
+    "morgan": "^1.9.0",
+    "passport": "^0.4.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
