--- a/package.json
+++ b/package.json
@@ -34,5 +34,17 @@
     "concurrently": "^3.5.1",
     "nodemon": "^1.17.5"
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "description": "",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ivelissecintron/ProjectAditum.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ivelissecintron/ProjectAditum/issues"
+  },
+  "homepage": "https://github.com/ivelissecintron/ProjectAditum#readme"
 }
