--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react": "^16.2.0",
+    "react-burger-menu": "^2.5.2",
     "react-dom": "^16.2.0",
+    "react-icons": "^3.0.5",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "reactstrap": "^6.4.0",
